fix: logo on narrow desktop window

--- a/common/common.scss
+++ b/common/common.scss
@@ -63,6 +63,15 @@ input[type="color"]:focus,
 .d-header {
   height: 5em;
   box-shadow: 0px 7px 8px 1px rgba(0, 0, 0, 0.15);
+
+  // This will only apply to desktop users that
+  // make their window very narrow
+  #site-logo {
+    @media (max-width: $mobile-breakpoint) {
+      max-width: 148px;
+      object-fit: contain;
+    }
+  }
 }
 
 .alert.alert-info {
