--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -17,3 +17,5 @@ $faktproSvg: "../assets/Fakt-Normal.svg#altivo-regular";
 $faktprosemibold: "../assets/Fakt-SemiBold.woff2";
 $euclidsquare: "../assets/EuclidSquare-Medium.woff2"; */
 
+$mobile-breakpoint: 460px;
+
